--- a/src/base/button.styl
+++ b/src/base/button.styl
@@ -5,9 +5,9 @@
 
 .btn
 	display inline-block
-	padding 10px 15px
+	padding 0.5rem 1rem
 	border none
-	border-radius 3px
+	border-radius 0.25rem
 	outline none !important
 	text-align center
 	background-color transparent
@@ -22,7 +22,7 @@
 
 	.icon
 		margin-top -2px
-		font-size 16px
+		font-size 1rem
 
 		+ .text
 			margin-left 5px
@@ -32,7 +32,7 @@
 	
 	&.-sm	
 		padding 5px 10px
-		font-size 0.95em
+		font-size 0.95rem
 
 _button(name, bg, text, edge=10%, hover=30%, active=15%)
 	.btn
