--- a/src/layouts/arena/index.styl
+++ b/src/layouts/arena/index.styl
@@ -20,11 +20,11 @@ body
 		float left
 		display block
 		height 40px
-		border-radius 2px
+		border-radius 0.25rem
 	
 		&.-user img
 			margin-left 10px
-			border-radius 2px
+			border-radius 0.25rem
 
 		&.-link,
 		&.-bell > a
@@ -72,7 +72,8 @@ body
 	&__link
 		display block
 		position relative
-		padding 10px 15px
+		padding 0.5rem 1rem
+		text-decoration none
 		background-color transparent
 		color white
 		
@@ -105,7 +106,6 @@ body
 	
 		.icon
 			margin -2px 5px 0 0
-			font-size 16px
 
 .pfoot
 	padding 10px 0
@@ -152,4 +152,4 @@ body
 
 	#content
 		margin-left 250px
-		border-radius 2px 0 0 0
+		border-radius 0.25rem 0 0 0
