--- a/src/layouts/site/index.styl
+++ b/src/layouts/site/index.styl
@@ -25,11 +25,11 @@ body
 		float left
 		display block
 		height 40px
-		border-radius 2px
+		border-radius 0.25rem
 	
 		&.-user img
 			margin-left 10px
-			border-radius 2px
+			border-radius 0.25rem
 
 		&.-link,
 		&.-bell > a
