--- a/src/widgets/handle/index.styl
+++ b/src/widgets/handle/index.styl
@@ -2,11 +2,12 @@
 
 .handle
 	padding 0.25rem 0.5rem
-	border-radius 3px
+	border-radius 0.25rem
 
 .handle,
 .handle:hover,
 .handle:focus
+	text-decoration none
 	color darken(#555555, 15%)
 	
 	&.-sss
