--- a/src/widgets/switch/index.styl
+++ b/src/widgets/switch/index.styl
@@ -33,7 +33,7 @@
 	width 100%
 	height 100%
 	border 1px solid mix($dark, $silver, 10)
-	border-radius 3px
+	border-radius 0.25rem
 	box-shadow inset 0 1px 0 rgba(0, 0, 0, .075)
 	transition background-color 0.25s ease
 
@@ -44,7 +44,7 @@
 	height 20px
 	margin 7px
 	border 1px solid $silver
-	border-radius 3px
+	border-radius 0.25rem
 	background-color white
 	box-shadow 0 1px 0 alpha($dark, .075)
 	transition left 0.25s ease
