--- a/src/base/alert.styl
+++ b/src/base/alert.styl
@@ -7,7 +7,7 @@
 	padding 1.5rem
 	margin-bottom 1.5rem
 	border 1px solid transparent
-	border-radius 3px
+	border-radius 0.25rem
 	
 	> p,
 	> ul
@@ -32,7 +32,7 @@
 		margin-right 1rem
 
 		.icon
-			font-size 1.45em
+			font-size 1.5em
 
 	&__actions
 		margin-top 1.5rem
