--- a/src/base/badge.styl
+++ b/src/base/badge.styl
@@ -2,8 +2,8 @@
 
 .badge
 	display inline-block
-	padding 0 5px
-	border-radius 3px
+	padding 0 0.5rem
+	border-radius 0.25rem
 	background-color alpha($silver, 50%)
 	color mix($dark, $muted)
 	transition background-color 0.25s ease-in-out
