--- a/src/base/dashlet.styl
+++ b/src/base/dashlet.styl
@@ -6,7 +6,7 @@
 .dashlet
 	margin-bottom 10px
 	border 1px solid $silver
-	border-radius 3px
+	border-radius 0.25rem
 	overflow hidden
 	background-color white
 	color $dark
