--- a/src/base/dropdown.styl
+++ b/src/base/dropdown.styl
@@ -9,7 +9,7 @@
 .dropdown-menu,
 .navbar-nav > li > .dropdown-menu
 	border-color darken($silver, 5%)
-	border-radius 2px
+	border-radius 0.25rem
 
 .dropdown-menu
 	margin-top 5px
@@ -19,7 +19,7 @@
 	
 	> li
 		> a
-			padding 10px 15px
+			padding 0.5rem 1rem
 			line-height 1.5
 			color $dark
 			transition background-color 0.25s ease-in-out
@@ -30,7 +30,7 @@
 				background-color lighten($silver, 75%)
 			
 			.icon
-				font-size 16px
+				font-size 1rem
 		
 		.dropdown
 			margin -25px 0 0 95%
@@ -47,8 +47,8 @@
 				background-color transparent
 	
 	.dropdown-header
-		padding 10px 15px 5px
-		font-size 0.9em
+		padding 0.5rem 1rem 0.25rem
+		font-size 0.9rem
 
 	.divider
 		margin 0
@@ -73,7 +73,7 @@
 				> a
 					display block
 					border-bottom 1px solid lighten($silver, 75%)
-					padding 10px 15px
+					padding 0.5rem 1rem
 					color $muted
 
 					&:hover,
@@ -82,7 +82,7 @@
 						background-color lighten($silver, 75%)
 
 					.time
-						margin-top 2px
+						margin-top 0.25rem
 						font-size 0.95em
 
 				&.unseen a
@@ -107,4 +107,4 @@
 	
 		> li > a,
 		.dropdown-header
-			padding 10px 15px
+			padding 0.5rem 1rem
