--- a/src/base/form.styl
+++ b/src/base/form.styl
@@ -14,10 +14,10 @@
 		display block
 		width 100%
 		height 34px
-		padding 5px 10px
+		padding 0.25rem 0.5rem
 		border 1px solid mix($dark, $silver, 10)
-		border-radius 3px
-		font-size 14px
+		border-radius 0.25rem
+		font-size 1rem
 		line-height 1.42857143
 		background-color white
 		color $dark
@@ -84,7 +84,7 @@ fieldset
 
 	.&__title
 		text-decoration underline
-		font-size 1.1em
+		font-size 1.1rem
 
 	.&__note
 		margin-top 5px
