--- a/src/base/modal.styl
+++ b/src/base/modal.styl
@@ -5,7 +5,7 @@
 
 .modal-content
 	border lighten($dark, 50%)
-	border-radius 2px
+	border-radius 0.25rem
 	box-shadow 0 5px 5px alpha($dark, 0.25)
 
 	.panel
@@ -21,7 +21,7 @@
 	.close
 		float right
 		padding 2px 5px
-		font-size 16px
+		font-size 1rem
 		opacity 1
 
 .modal.fade .modal-dialog
