--- a/src/base/panel.styl
+++ b/src/base/panel.styl
@@ -5,9 +5,9 @@
 
 .panel
 	margin 0 0 10px
-	padding 20px
+	padding 1.25rem
 	border 1px solid $silver
-	border-radius 2px
+	border-radius 0.25rem
 	background-color white
 	box-shadow 0 1px 0 alpha($dark, 0.0325)
 
@@ -21,9 +21,15 @@
 		min-height 50px
 		margin -10px 0 10px
 
+	&__head.-socle
+		margin -1.25rem -1.25rem 1.25rem -1.25rem
+		padding 1.25rem 1.25rem 0
+		border-bottom 1px solid $silver
+		box-shadow 0 1px 0 alpha($dark, 0.0325)
+		
 	&__foot.-shade
-		margin 0 -20px -20px -20px
-		padding 20px
+		margin 0 -1.25rem -1.25rem -1.25rem
+		padding 1.25rem
 		background-color lighten($silver, 75%)
 
 	&__title
@@ -37,7 +43,7 @@
 	
 		.icon
 			margin -2px 5px 0 0
-			font-size 24px
+			font-size 1.5rem
 
 	&__actions
 		float right
@@ -49,8 +55,8 @@
 			
 	&__drawer
 		display none
-		margin -10px -20px 10px
-		padding 15px 20px 0
+		margin -10px -1.25rem 10px
+		padding 15px 1.25rem 0
 		border-top 1px solid lighten($silver, 50%)
 		border-bottom 1px solid lighten($silver, 50%)
 		box-shadow inset 0 1px 0 alpha($dark, 0.0325)
@@ -77,7 +83,7 @@
 
 	&.-closed
 		> .panel__head
-			margin-bottom -20px
+			margin-bottom -1.25rem
 
 		> .panel__body,
 		> .panel__foot
