--- a/src/widgets/icon/index.styl
+++ b/src/widgets/icon/index.styl
@@ -46,7 +46,7 @@ _iconcolor('silver', invert(94%) sepia(11%) saturate(94%) hue-rotate(169deg) bri
 	filter invert(100%) sepia(100%) saturate(0%) hue-rotate(125deg) brightness(103%) contrast(103%)
 
 .icon.sm
-	font-size 16px
+	font-size 0.95em
 
 .icon.x2
 	font-size 2em
