--- a/src/widgets/pills/index.styl
+++ b/src/widgets/pills/index.styl
@@ -7,8 +7,9 @@
 		display block
 		float left
 		position relative
-		padding 10px 15px
-		border-radius 3px
+		padding 0.5rem 1rem
+		border-radius 0.25rem
+		text-decoration none
 		transition background-color 0.25s ease-in-out
 		
 		&:focus,
