Fix require paths

--- a/src/base/index.styl
+++ b/src/base/index.styl
@@ -1,11 +1,11 @@
 // Copyright 2020 Furqan Software Ltd. All Rights Reserved.
 
-@require './func'
-@require './palette'
 @require './reset'
+@require './palette'
 @require './grid'
 @require './font'
-@require './text'
+@require './typography'
+@require './code'
 @require './form'
 @require './table'
 @require './badge'
