--- a/src/layouts/kiosk/index.styl
+++ b/src/layouts/kiosk/index.styl
@@ -1,7 +1,7 @@
 // Copyright 2020 Furqan Software Ltd. All rights reserved.
 
 @require '../../base/func'
-@require '../../base/color'
+@require '../../base/palette'
 
 .phead
 	position fixed
