--- a/src/layouts/site/parts/pnav.styl
+++ b/src/layouts/site/parts/pnav.styl
@@ -1,6 +1,6 @@
 // Copyright 2020 Furqan Software Ltd. All rights reserved.
 
-@require '../../../base/color'
+@require '../../../base/palette'
 
 .pnav
 	display none
