--- a/src/widgets/strips/index.styl
+++ b/src/widgets/strips/index.styl
@@ -1,6 +1,6 @@
 // Copyright 2021 Furqan Software Ltd. All rights reserved.
 
-@require '../../base/color'
+@require '../../base/palette'
 
 .strips
 	margin -10px -20px -20px
