--- a/src/widgets/pills/index.styl
+++ b/src/widgets/pills/index.styl
@@ -1,6 +1,6 @@
 // Copyright 2021 Furqan Software Ltd. All rights reserved.
 
-@require '../../base/color'
+@require '../../base/palette'
 
 .pills
 	&__item
