Remove underline from non-links

--- a/src/base/button.styl
+++ b/src/base/button.styl
@@ -10,7 +10,12 @@
 	border-radius 0.25rem
 	outline none !important
 	text-align center
+	text-decoration none
 	background-color transparent
+	
+	&:hover,
+	&:focus
+		text-decoration none
 
 	&.-disabled,
 	&[disabled]
