--- a/src/layouts/arena/index.styl
+++ b/src/layouts/arena/index.styl
@@ -88,8 +88,8 @@ body
 			transition transform 0.125s ease-in-out
 
 		&:hover,
-		&:focus,
-		&:active
+		&:focus
+			text-decoration none
 			color white
 			
 			&::after
