--- a/src/widgets/strips/index.styl
+++ b/src/widgets/strips/index.styl
@@ -11,10 +11,12 @@
 		position relative
 		padding 10px 20px
 		border-bottom 1px solid lighten($silver, 75%)
+		text-decoration none
 		transition background-color 0.25s ease-in-out
 		
 		&:focus,
 		&:hover
+			text-decoration none
 			box-shadow inset 10px 0 0 -5px alpha($blue, 50%)
 
 		&:last-child
