Push site footer to bottom

--- a/src/layouts/site/index.styl
+++ b/src/layouts/site/index.styl
@@ -4,6 +4,9 @@
 @require '../../base/palette'
 
 body
+	display flex
+	flex-direction column
+	min-height 100vh
 	background-color #f7f9fc
 
 .phead
@@ -63,6 +66,7 @@ body
 			color white
 
 .pfoot
+	margin-top auto
 	padding 15px 0
 	border-top 1px solid $silver
 	color $muted
