Make artifact images fit

--- a/src/base/artifact.styl
+++ b/src/base/artifact.styl
@@ -87,6 +87,9 @@
 		pre
 			padding 0
 			margin 0
-			border none
-			background-color transparent
+			
+	img
+		display block
+		margin 0 auto
+		max-width 100%
 	
