--- a/src/layouts/site/index.styl
+++ b/src/layouts/site/index.styl
@@ -36,6 +36,7 @@ body
 
 		&.-link,
 		&.-bell > a
+			text-decoration none
 			transition background-color 0.25s ease-in-out
 
 			img
@@ -45,6 +46,7 @@ body
 			&:hover,
 			&:focus,
 			&.open
+				text-decoration none
 				background-color lighten($dark, 95%)
 
 				img
