Update margin unit

--- a/src/base/form.styl
+++ b/src/base/form.styl
@@ -5,10 +5,10 @@
 
 .form
 	&__group
-		margin-bottom 10px
+		margin-bottom 0.5rem
 	
 	&__label
-		margin-bottom 5px
+		margin-bottom 0.25rem
 
 	&__field
 		display block
