--- a/src/layouts/arena/index.styl
+++ b/src/layouts/arena/index.styl
@@ -35,7 +35,7 @@ body
 
 			&:hover,
 			&:focus,
-			&.open
+			&.-open
 				background-color lighten($dark, 5%)
 
 		&.-link
@@ -131,7 +131,7 @@ body
 		display none
 		overflow-y hidden
 
-		&.open
+		&.-open
 			display block
 
 @media (min-width: 992px)
