--- a/src/layouts/site/index.styl
+++ b/src/layouts/site/index.styl
@@ -40,6 +40,7 @@ body
 			transition background-color 0.25s ease-in-out
 
 			img
+				display block
 				opacity 0.35
 				transition opacity 0.25s ease-in-out
 
