--- a/src/base/table.styl
+++ b/src/base/table.styl
@@ -77,7 +77,7 @@ th
 		background-color lighten($silver, 75%)
 
 .table.-emphasis > tbody tr:hover
-	background linear-gradient(transparent 1px, lighten($blue, 62.5%) 1px, transparent 3px), linear-gradient(to top, transparent 1px, lighten($blue, 62.5%) 1px, transparent 3px)
+	background linear-gradient(lighten($blue, 75%), lighten($blue, 75%) 3px, transparent 3px, transparent 100%), linear-gradient(to top, lighten($blue, 75%), lighten($blue, 75%) 3px, transparent 3px, transparent 100%)
 
 .tablebox
 	min-height .01%
