Make dropdown item highlight more visible

--- a/src/base/dropdown.styl
+++ b/src/base/dropdown.styl
@@ -33,7 +33,7 @@
 	&__item
 		padding 0.5rem 1rem
 		color $dark
-		transition background-color 0.25s ease-in-out
+		transition background-color 0.25s ease-in
 		
 		&.-link
 			text-decoration none
@@ -46,7 +46,7 @@
 		&:not(.-disabled)
 			&:hover,
 			&:focus
-				background-color lighten($silver, 75%)
+				background-color lighten($silver, 25%)
 
 		&.-active
 			position relative
