--- a/src/base/dropdown.styl
+++ b/src/base/dropdown.styl
@@ -60,6 +60,9 @@
 			width 1rem
 			margin-right 1rem
 			font-size 1rem
+			
+		.badge
+			margin-left 2rem
 
 	&__head
 		padding 0.5rem 1rem 0.25rem
