--- a/src/base/dropdown.styl
+++ b/src/base/dropdown.styl
@@ -124,8 +124,11 @@
 			input[type=radio]:checked + *
 				display block
 		
-		.dropdown__menu label
-			cursor pointer
+		.dropdown__menu
+			width 100%
+
+			label
+				cursor pointer
 			
 		select
 			display none
