Use display flex in pills

--- a/src/widgets/pills/index.styl
+++ b/src/widgets/pills/index.styl
@@ -3,10 +3,10 @@
 @require '../../base/palette'
 
 .pills
+	display flex
+
 	&__item
-		display block
-		float left
-		position relative
+		flex 0 0 auto
 		padding 0.5rem 1rem
 		border-radius 0.25rem
 		text-decoration none
