Keep active navsm pills always visible

--- a/src/widgets/pills/index.styl
+++ b/src/widgets/pills/index.styl
@@ -65,8 +65,7 @@
 
 @media (max-width: 991px)
 	.pills
-		> :not(.-active),
-		.badge
+		> :not(.-active):not(.-navsm)
 			display none
 
 	.pillsbox
