Make dropdown a widget, include JavaScript

--- a/src/widgets/dropdown/index.styl
+++ b/src/widgets/dropdown/index.styl
@@ -1,7 +1,7 @@
 // Copyright 2020 Furqan Software Ltd. All Rights Reserved.
 
-@require './func'
-@require './palette'
+@require '../../base/func'
+@require '../../base/palette'
 
 .dropdown
 	position relative
