Fix require path

--- a/src/base/artifact.styl
+++ b/src/base/artifact.styl
@@ -1,7 +1,7 @@
 // Copyright 2020 Furqan Software Ltd. All rights reserved.
 
 @require './func'
-@require './color'
+@require './palette'
 
 .artifact
 	font-size 1.25rem
