--- a/src/base/button.styl
+++ b/src/base/button.styl
@@ -1,7 +1,7 @@
 // Copyright 2020 Furqan Software Ltd. All Rights Reserved.
 
 @require './func'
-@require './color'
+@require './palette'
 
 .btn
 	display inline-block
