--- a/src/base/alert.styl
+++ b/src/base/alert.styl
@@ -1,6 +1,6 @@
 // Copyright 2020 Furqan Software Ltd. All Rights Reserved.
 
-@require './color'
+@require './palette'
 
 .alert
 	position relative
