--- a/src/base/avatar.styl
+++ b/src/base/avatar.styl
@@ -1,6 +1,6 @@
 // Copyright 2020 Furqan Software Ltd. All rights reserved.
 
-@require './color'
+@require './palette'
 
 .avatar
 	display inline-block
