--- a/src/base/color.styl
+++ b/src/base/color.styl
@@ -1,6 +1,6 @@
 // Copyright 2020 Furqan Software Ltd. All Rights Reserved.
 
-@require './color'
+@require './palette'
 
 _color(name, code)
 	.bg-{name}
