--- a/src/base/label.styl
+++ b/src/base/label.styl
@@ -1,7 +1,7 @@
 
 // Copyright 2020 Furqan Software Ltd. All Rights Reserved.
 
-@require './color'
+@require './palette'
 
 .label
 	padding 3px 6px 3px 6px
