--- a/src/base/modal.styl
+++ b/src/base/modal.styl
@@ -1,7 +1,7 @@
 // Copyright 2020 Furqan Software Ltd. All Rights Reserved.
 
 @require './func'
-@require './color'
+@require './palette'
 
 .modal-content
 	border lighten($dark, 50%)
