--- a/src/base/panel.styl
+++ b/src/base/panel.styl
@@ -1,7 +1,7 @@
 // Copyright 2020 Furqan Software Ltd. All Rights Reserved.
 
 @require './func'
-@require './color'
+@require './palette'
 
 .panel
 	margin 0 0 10px
