--- a/src/base/modal.styl
+++ b/src/base/modal.styl
@@ -6,7 +6,7 @@
 .modal-content
 	border lighten($dark, 50%)
 	border-radius 0.25rem
-	box-shadow 0 5px 5px alpha($dark, 0.25)
+	box-shadow 0 0.5rem 1rem $shadow5
 
 	.panel
 		padding 10px
