--- a/src/base/dashlet.styl
+++ b/src/base/dashlet.styl
@@ -10,7 +10,7 @@
 	overflow hidden
 	background-color white
 	color $dark
-	box-shadow 0 1px 0 alpha($dark, 0.0325)
+	box-shadow 0 0.0625rem 0.125rem $shadow1
 
 	&.-active,
 	&.-active:hover
