--- a/src/base/panel.styl
+++ b/src/base/panel.styl
@@ -9,7 +9,7 @@
 	border 1px solid $silver
 	border-radius 0.25rem
 	background-color white
-	box-shadow 0 1px 0 alpha($dark, 0.0325)
+	box-shadow 0 0.0625rem 0.125rem $shadow1
 
 	&.-fit
 		padding 0
@@ -25,7 +25,7 @@
 		margin -1.25rem -1.25rem 1.25rem -1.25rem
 		padding 1.25rem 1.25rem 0
 		border-bottom 1px solid $silver
-		box-shadow 0 1px 0 alpha($dark, 0.0325)
+		box-shadow 0 0.25rem 0.125rem $shadow0
 		
 	&__foot.-shade
 		margin 0 -1.25rem -1.25rem -1.25rem
@@ -59,7 +59,7 @@
 		padding 15px 1.25rem 0
 		border-top 1px solid lighten($silver, 50%)
 		border-bottom 1px solid lighten($silver, 50%)
-		box-shadow inset 0 1px 0 alpha($dark, 0.0325)
+		box-shadow inset 0 0.25rem 0.125rem $shadow0
 		
 		&:after
 			display table
