--- a/src/layouts/site/index.styl
+++ b/src/layouts/site/index.styl
@@ -13,7 +13,7 @@ body
 	margin-bottom 25px
 	border-bottom 1px solid $silver
 	background white
-	box-shadow 0 1px 0 alpha($dark, 0.0325)
+	box-shadow 0 0.0625rem 0.125rem $shadow1
 
 	&__logo
 		float left
