--- a/src/widgets/dropdown/index.styl
+++ b/src/widgets/dropdown/index.styl
@@ -20,7 +20,7 @@
 		border-radius 0.25rem
 		text-align left
 		background-color white
-		box-shadow 0 3px 5px alpha($dark, 0.05)
+		box-shadow 0 0.25rem 0.5rem $shadow3
 		
 		&.-right
 			right 0
@@ -50,7 +50,7 @@
 
 		&.-active
 			position relative
-			box-shadow inset 10px 0 0 -5px $blue
+			box-shadow inset 0.5rem 0 0 -0.25rem $blue
 		
 		&.-disabled
 			opacity 0.75
