--- a/src/base/panel.styl
+++ b/src/base/panel.styl
@@ -55,8 +55,8 @@
 			
 	&__drawer
 		display none
-		margin -10px -1.25rem 10px
-		padding 15px 1.25rem 0
+		margin 0 -1.25rem
+		padding 1rem 1.25rem 0
 		border-top 1px solid lighten($silver, 50%)
 		border-bottom 1px solid lighten($silver, 50%)
 		box-shadow inset 0 0.25rem 0.125rem $shadow0
