--- a/src/base/button.styl
+++ b/src/base/button.styl
@@ -109,17 +109,9 @@ _button('red', $red, white, 20%, 45%, 22.5%)
 		border-color $silver
 
 .btngroup
-	position relative
-	display inline-block
-	margin-left 5px
-	
-	&:first-child
-		margin-left 0
+	display inline-flex
 	
 	> .btn
-		position relative
-		float left
-
 		&:not(:first-child):not(:last-child)
 			border-radius 0
 
@@ -128,3 +120,10 @@ _button('red', $red, white, 20%, 45%, 22.5%)
 
 		&:last-child:not(:first-child), &.-toggle:not(:first-child)
 			border-radius 0 0.25rem 0.25rem 0
+
+.btntoolbar
+	display flex
+	gap 5px
+	
+	.-right.btngroup
+		margin-left auto
