--- a/src/layouts/site/parts/pnav.styl
+++ b/src/layouts/site/parts/pnav.styl
@@ -9,29 +9,28 @@
 	
 	&.-open
 		display block
+	
+	&__group
+		display flex
 
 	&__search
 		position relative
-		width 100%
-		margin 12px 0
 		font-size 1rem
 		
 		input
 			width 100%
-			padding 7px 5px 6px 25px
+			padding 0.75rem 1rem 0.75rem 2rem
 			border none
-			border-bottom 1px solid lighten($silver, 50%)
-			transition border-bottom-color 0.25s ease-in-out
-			
+
 			&:focus
-				border-bottom-color $blue
 				outline none
 		
 		.icon
 			position absolute
-			top 12px
-			left 5px
-			opacity 0.5
+			top 1.125rem
+			left 0.25rem
+			line-height inherit
+			opacity 0.75
 		
 	&__item
 		color $dark
@@ -54,10 +53,17 @@
 				text-decoration none
 
 		.icon
-			margin-top -3px
+			margin-top 0.25rem
 
 @media (max-width: 991px)
 	.pnav
+		&__group
+			flex-direction column
+
+		&__search
+			width 100%
+			margin 1rem 0
+		
 		&__item.-link,
 		&__item.-drop > a,
 		&__menu > a
@@ -66,8 +72,8 @@
 			padding 0.5rem 1rem
 
 			&.-active
-				border-left 2px solid $blue
-				padding-left 13px
+				border-left 0.25rem solid $blue
+				padding-left 0.75rem
 
 		&__item.-drop
 			.pnav__menu
@@ -75,6 +81,9 @@
 			
 			&.-open .pnav__menu
 				display block
+		
+		&__divider
+			height 1rem
 
 @media (min-width: 992px)
 	.pnav
@@ -82,37 +91,13 @@
 
 		&__search
 			float right
-			width 250px
-			margin 6px 0
+			width 15rem
 		
 		&__item
-			// float left
-			display inline-block
-			
 			&.-link,
 			&.-drop > a
 				position relative
-				padding 15px 15px 13px
-
-				&::after
-					content ''
-					position absolute
-					left 0
-					bottom 0
-					width 100%
-					border-bottom 2px solid lighten($blue, 50%)
-					transform scaleX(0)
-					transition transform 0.125s ease-in-out
-
-				&:hover,
-				&:focus
-					&::after
-						transform scaleX(1)
-
-				&.-active
-					&::after
-						transform scaleX(1)
-						border-bottom-color $blue
+				padding 0.75rem 1rem
 
 			&.-drop
 				position relative
@@ -151,3 +136,32 @@
 				
 				&.-open .pnav__menu
 					display block
+
+		&__search,
+		&__item.-link,
+		&__item.-drop > a
+			&::after
+				content ''
+				position absolute
+				left 0
+				bottom 0
+				width 100%
+				border-bottom 0.125rem solid lighten($blue, 50%)
+				transform scaleX(0)
+				transition transform 125ms ease-in
+
+			&:hover,
+			&:focus,
+			&:focus-within
+				&::after
+					transform scaleX(1)
+
+			&.-active
+				&::after
+					transform scaleX(1)
+					border-bottom-color $blue
+
+		&__divider
+			height 1rem
+			margin 1rem
+			border-left 1px solid $silver
