--- a/src/base/button.styl
+++ b/src/base/button.styl
@@ -109,7 +109,7 @@ _button('red', $red, white, 20%, 45%, 22.5%)
 		border-color $silver
 
 .btngroup
-	display inline-flex
+	display flex
 	
 	> .btn
 		&:not(:first-child):not(:last-child)
