--- a/src/base/artifact.styl
+++ b/src/base/artifact.styl
@@ -1,5 +1,6 @@
 // Copyright 2020 Furqan Software Ltd. All rights reserved.
 
+@require './const'
 @require './func'
 @require './palette'
 
@@ -18,7 +19,7 @@
 		&.-modest
 			height 160px
 			opacity 0.5
-			transition opacity 0.25s ease-in-out
+			transition opacity $fast ease-in
 		
 		&.-placeholder
 			background-position 50% 50%
