--- a/src/base/pagination.styl
+++ b/src/base/pagination.styl
@@ -1,5 +1,6 @@
 // Copyright 2020 Furqan Software Ltd. All rights reserved.
 
+@require './const'
 @require './palette'
 
 .pagination
@@ -10,7 +11,7 @@
 		> span
 			margin 0 2px
 			border none
-			transition background-color 0.25s ease-in-out
+			transition background-color $fast ease-in
 	
 	> li,
 	> li:first-child,
