--- a/src/layouts/site/index.styl
+++ b/src/layouts/site/index.styl
@@ -1,5 +1,6 @@
 // Copyright 2020 Furqan Software Ltd. All rights reserved.
 
+@require '../../base/const'
 @require '../../base/func'
 @require '../../base/palette'
 
@@ -37,12 +38,12 @@ body
 		&.-link,
 		&.-bell > a
 			text-decoration none
-			transition background-color 0.25s ease-in-out
+			transition background-color $fast ease-in
 
 			img
 				display block
 				opacity 0.35
-				transition opacity 0.25s ease-in-out
+				transition opacity $fast ease-in
 
 			&:hover,
 			&:focus,
