--- a/src/base/avatar.styl
+++ b/src/base/avatar.styl
@@ -1,5 +1,6 @@
 // Copyright 2020 Furqan Software Ltd. All rights reserved.
 
+@require './const'
 @require './palette'
 
 .avatar
@@ -30,7 +31,7 @@
 		width 24px
 		height 18px
 		margin 0
-		transition opacity 200ms ease, transform 250ms ease
+		transition opacity $fast ease, transform $fast ease
 
 	&:hover
 		.emblem
