--- a/src/widgets/dropdown/index.styl
+++ b/src/widgets/dropdown/index.styl
@@ -1,5 +1,6 @@
 // Copyright 2020 Furqan Software Ltd. All Rights Reserved.
 
+@require '../../base/const'
 @require '../../base/func'
 @require '../../base/palette'
 
@@ -33,7 +34,7 @@
 	&__item
 		padding 0.5rem 1rem
 		color $dark
-		transition background-color 0.25s ease-in
+		transition background-color $fast ease-in
 		
 		&.-link
 			text-decoration none
