--- a/src/widgets/switch/index.styl
+++ b/src/widgets/switch/index.styl
@@ -1,5 +1,6 @@
 // Copyright 2021 Furqan Software Ltd. All rights reserved.
 
+@require '../../base/const'
 @require '../../base/palette'
 
 .switch
@@ -35,7 +36,7 @@
 	border 1px solid mix($dark, $silver, 10)
 	border-radius 0.25rem
 	box-shadow inset 0 1px 0 rgba(0, 0, 0, .075)
-	transition background-color 0.25s ease
+	transition background-color $fast ease
 
 .switch__toggle::after
 	top 0
@@ -47,7 +48,7 @@
 	border-radius 0.25rem
 	background-color white
 	box-shadow 0 1px 0 alpha($dark, .075)
-	transition left 0.25s ease
+	transition left $fast ease
 
 .switch__input:checked + .switch__toggle::before
 	background-color alpha($blue, 0.05)
