Define glow colors

--- a/src/base/palette.styl
+++ b/src/base/palette.styl
@@ -10,6 +10,11 @@ $silver = #e7ecf1
 
 $muted = mix($dark, $silver)
 
+$shade = alpha($silver, 75%)
+
+$blueglow = alpha($blue, 75%)
+$silverglow = alpha($silver, 75%)
+
 $shadow0 = alpha($dark, 2.5%) // Form fields.
 $shadow1 = alpha($dark, 5%)   // Regular panels, closest to page.
 $shadow2 = alpha($dark, 10%)  // Important panels, above regular panels.
