--- a/src/base/panel.styl
+++ b/src/base/panel.styl
@@ -96,7 +96,7 @@ a > .panel
 	transition border-color $fast ease-in
 
 	&:hover
-		border-color lighten($blue, 50%)
+		border-color $blueglow
 
 section
 	> .caption
