--- a/src/widgets/dropdown/index.styl
+++ b/src/widgets/dropdown/index.styl
@@ -47,7 +47,7 @@
 		&:not(.-disabled)
 			&:hover,
 			&:focus
-				background-color lighten($silver, 25%)
+				background-color $silverglow
 
 		&.-active
 			position relative
