--- a/src/base/table.styl
+++ b/src/base/table.styl
@@ -78,7 +78,7 @@ th
 		background-color lighten($silver, 75%)
 
 .table.-emphasis > tbody tr:hover
-	background linear-gradient(lighten($blue, 75%), lighten($blue, 75%) 3px, transparent 3px, transparent 100%), linear-gradient(to top, lighten($blue, 75%), lighten($blue, 75%) 3px, transparent 3px, transparent 100%)
+	background linear-gradient($blueglow, $blueglow 3px, transparent 3px, transparent 100%), linear-gradient(to top, $blueglow, $blueglow 3px, transparent 3px, transparent 100%)
 
 .tablebox
 	min-height .01%
