--- a/src/layouts/site/index.styl
+++ b/src/layouts/site/index.styl
@@ -49,7 +49,7 @@ body
 			&:focus,
 			&.-open
 				text-decoration none
-				background-color lighten($dark, 95%)
+				background-color $silverglow
 
 				img
 					opacity 0.5
