--- a/src/layouts/site/parts/pnav.styl
+++ b/src/layouts/site/parts/pnav.styl
@@ -146,7 +146,7 @@
 				left 0
 				bottom 0
 				width 100%
-				border-bottom 0.125rem solid lighten($blue, 50%)
+				border-bottom 0.125rem solid $blueglow
 				transform scaleX(0)
 				transition transform $fast ease-in
 
