--- a/src/widgets/dropdown/index.styl
+++ b/src/widgets/dropdown/index.styl
@@ -16,7 +16,6 @@
 		z-index 1000
 		min-width 150px
 		min-width max-content
-		margin-top 0.25rem
 		border 1px solid $silver
 		border-radius 0.25rem
 		text-align left
@@ -30,6 +29,10 @@
 		&.-scroll
 			overflow-y auto
 			-webkit-overflow-scrolling touch
+		
+		.dropdown__menu
+			top 0
+			left 100%
 	
 	&__item
 		padding 0.5rem 1rem
@@ -43,8 +46,27 @@
 			&:focus
 				text-decoration none
 				color $dark
+		
+		&.-drop
+			position relative
+			padding-right 3rem
+			
+			&::after
+				content ''
+				position absolute
+				width 0
+				height 0
+				top 50%
+				right 0
+				z-index 2
+				margin -0.3125rem 0.75rem 0 0
+				border-top 0.3125rem solid transparent
+				border-left 0.3125rem solid lighten($dark, 25%)
+				border-bottom 0.3125rem solid transparent
 
 		&:not(.-disabled)
+			cursor pointer
+
 			&:hover,
 			&:focus
 				background-color $silverglow
@@ -114,7 +136,7 @@
 				z-index 2
 				margin -0.125rem 0.5rem 0 0
 				border-left 0.25rem solid transparent
-				border-top 0.25rem solid lighten($dark, 50%)
+				border-top 0.25rem solid lighten($dark, 25%)
 				border-right 0.25rem solid transparent
 
 			input[type=radio]
