Change units to rem

--- a/src/base/button.styl
+++ b/src/base/button.styl
@@ -35,8 +35,8 @@
 	.text + .icon
 		margin-left 5px
 	
-	&.-sm	
-		padding 5px 10px
+	&.-sm
+		padding 0.25rem 0.5rem
 		font-size 0.95rem
 
 _button(name, bg, text, edge=10%, hover=30%, active=15%)
