--- a/src/base/table.styl
+++ b/src/base/table.styl
@@ -21,16 +21,21 @@ th
 	border none
 	
 	&__actions
-		text-align right
+		display flex
+		gap 0.25rem
+		opacity 0.5
 		
-		.btngroup.-hover
-			opacity 0.25
-			transition opacity 125ms ease-in
+		.btngroup
+			transition opacity $fast ease-in
+			
+			&:first-child
+				margin-left auto
 
 		.btn
-			padding 5px 10px
+			padding 0.25rem 0.5rem
+			font-size 0.95em
 	
-	tr:hover .table__actions .btngroup.-hover
+	tr:hover .table__actions
 		opacity 1
 
 	> thead > tr > th,
