--- a/src/base/panel.styl
+++ b/src/base/panel.styl
@@ -5,7 +5,7 @@
 @require './palette'
 
 .panel
-	margin 0 0 10px
+	margin-bottom 0.5rem
 	padding 1.25rem
 	border 1px solid $silver
 	border-radius 0.25rem
@@ -53,13 +53,13 @@
 		padding 0.25rem 0
 
 		.btn
-			padding 5px 10px
+			padding 0.25rem 0.5rem
 			font-size 0.95em
 			
 	&__drawer
 		display none
-		margin 0 -1.25rem
-		padding 1rem 1.25rem 0
+		margin 0 -1.25rem 1rem
+		padding 1rem 1.25rem 0.5rem
 		border-top 1px solid lighten($silver, 50%)
 		border-bottom 1px solid lighten($silver, 50%)
 		box-shadow inset 0 0.25rem 0.125rem $shadow0
