--- a/src/base/panel.styl
+++ b/src/base/panel.styl
@@ -6,7 +6,6 @@
 
 .panel
 	margin-bottom 0.5rem
-	padding 1.25rem
 	border 1px solid $silver
 	border-radius 0.25rem
 	background-color white
@@ -19,24 +18,50 @@
 		border-color $green
 
 	&__head
-		min-height 50px
-		margin -0.5rem 0 0.5rem
+		padding 1rem 1.25rem
+		
+		&::after
+			content ''
+			display block
+			clear both
 
 	&__head.-socle
-		margin -1.25rem -1.25rem 1.25rem -1.25rem
-		padding 1.25rem 1.25rem 0
+		margin-bottom 1.25rem
+		padding-bottom 0
 		border-bottom 1px solid $silver
 		box-shadow 0 0.25rem 0.125rem $shadow0
 		
+		.tabsbox
+			margin-top 1rem
+
+	&__drawer
+		display none
+		padding 1rem 1.25rem 0.5rem
+		border-top 1px solid lighten($silver, 50%)
+		border-bottom 1px solid lighten($silver, 50%)
+		box-shadow inset 0 0.25rem 0.125rem $shadow0
+		
+		&:after
+			display table
+			content " "
+			clear both
+
+		&.-open
+			display block
+
+	&__body
+		padding 1rem 1.25rem
+
+		.progress
+			margin-bottom 0
+
 	&__foot.-shade
-		margin 0 -1.25rem -1.25rem -1.25rem
-		padding 1.25rem
+		padding 1rem 1.25rem
 		background-color lighten($silver, 75%)
 
 	&__title
-		display inline-block
 		float left
-		padding 10px 0
+		line-height 2.25rem
 
 		h1, h2, h3, h4, h5, h6
 			margin 0
@@ -50,34 +75,11 @@
 		float right
 		display flex
 		gap 0.25rem
-		padding 0.25rem 0
+		margin 0 0 0 auto
 
 		.btn
 			padding 0.25rem 0.5rem
 			font-size 0.95em
-			
-	&__drawer
-		display none
-		margin 0 -1.25rem 1rem
-		padding 1rem 1.25rem 0.5rem
-		border-top 1px solid lighten($silver, 50%)
-		border-bottom 1px solid lighten($silver, 50%)
-		box-shadow inset 0 0.25rem 0.125rem $shadow0
-		
-		&:after
-			display table
-			content " "
-			clear both
-
-		&.-open
-			display block
-	
-	&__body .panel__actions
-		padding 0
-
-	&__body
-		.progress
-			margin-bottom 0
 
 	&.-clipped > &__body
 		max-height 190px
