Use pointer cursor on dropdown toggle

--- a/src/widgets/dropdown/index.styl
+++ b/src/widgets/dropdown/index.styl
@@ -7,6 +7,10 @@
 .dropdown
 	position relative
 	
+	&__toggle
+		&:not(.-disabled)
+			cursor pointer
+
 	&__menu
 		display none
 		flex-direction column
