--- a/src/base/palette.styl
+++ b/src/base/palette.styl
@@ -8,6 +8,10 @@ $red    = #e35b5a
 $orange = #e87e04
 $silver = #e7ecf1
 
+$dark500 = mix($dark, $silver, 10%)
+$dark600 = mix($dark, $silver, 20%)
+$dark700 = mix($dark, $silver, 30%)
+
 $muted = mix($dark, $silver)
 
 $shade = alpha($silver, 75%)
