--- a/src/widgets/dropdown/index.styl
+++ b/src/widgets/dropdown/index.styl
@@ -20,6 +20,7 @@
 		z-index 1000
 		min-width 150px
 		min-width max-content
+		margin 0.25rem 0
 		border 1px solid $silver
 		border-radius 0.25rem
 		text-align left
